# tikka-contracts

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-testnet.yml  release.yml
contracts/raffle/: Cargo.toml
contracts/raffle-instance/: Cargo.toml
contracts/raffle-instance/src/: admin.rs  claim.rs  draw.rs  events.rs  helpers.rs  init.rs  lib.rs  randomness.rs  test.rs  tickets.rs  views.rs
contracts/raffle-shared/: Cargo.toml
contracts/raffle-shared/src/: lib.rs
contracts/raffle/src/: events.rs  lib.rs
contracts/raffle/src/instance/: mod.rs
docs/: ARCHITECTURE.md  COMMIT_REVEAL.md  ERRORS.md  EVENTS.md  FEE_MODEL.md  MIGRATION-426.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_winner_selection.rs
oracle/: .eslintrc.json  Dockerfile  README.md  package.json
oracle/src/: config.test.ts  config.ts  index.ts
oracle/src/deduplication/: deduplication.store.ts
scripts/: generate_error_docs.py
