[package]
name = "raffle-instance"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
std = []

[dependencies]
soroban-sdk = { workspace = true }
raffle-shared = { path = "../raffle-shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
