[package]
name = "raffle-factory"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "Tikka raffle factory smart contract for Stellar/Soroban"
repository = "https://github.com/crackedstudio/tikka-contracts"
authors = ["Tikka Team"]
keywords = ["soroban", "stellar", "raffle", "defi", "blockchain"]
categories = ["cryptography::cryptocurrencies", "no-std"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
raffle-shared = { path = "../raffle-shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1"
ed25519-dalek = "2"
raffle-instance = { path = "../raffle-instance" }

# Optimize WASM size
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"
